--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             });
             
             var jqxhr = function () {
-            $.getJSON( "http://kitchencop.herokuapp.com/recalls/1.json", function(jd) {
+            $.getJSON( "https://kitchencop.herokuapp.com/recalls/1.json", function(jd) {
 			  alert("ID:"+jd.product_id+"   Reason:"+jd.reason);
 			})
 			  .done(function() {
